--- a/MysteryJam.uproject
+++ b/MysteryJam.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.3",
+	"EngineAssociation": "{88629FAE-4BD4-ECA5-0A00-1B9EB7A65D49}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
