--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,7 +27,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 r.Shadow.Virtual.Enable=1
 
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
-
+r.ScreenPercentage = 50
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.CustomDepth=3
 r.AllowStaticLighting=False
