--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,6 +25,26 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 
 r.Shadow.Virtual.Enable=1
+r.LightFunctionQuality=1
+r.ShadowQuality=2
+r.Shadow.CSM.MaxCascades=1
+r.Shadow.MaxResolution=1024
+r.Shadow.RadiusThreshold=0.05
+r.Shadow.DistanceScale=0.7
+r.Shadow.CSM.TransitionScale=0.25
+r.MotionBlurQuality=3
+r.BlurGBuffer=0
+r.AmbientOcclusionLevels=1
+r.AmbientOcclusionRadiusScale=1.7
+r.DepthOfFieldQuality=1
+r.RenderTargetPoolMin=350
+r.LensFlareQuality=0
+r.SceneColorFringeQuality=0
+r.EyeAdaptationQuality=0
+r.BloomQuality=4
+r.FastBlurThreshold=2
+r.Upscale.Quality=2
+r.Tonemapper.GrainQuantization=0
 
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.ScreenPercentage = 50
