--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,6 +51,7 @@ r.ScreenPercentage = 50
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.CustomDepth=3
 r.AllowStaticLighting=False
+r.AntiAliasingMethod=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
